--- a/package.json
+++ b/package.json
@@ -1,6 +1,12 @@
 {
   "name": "maxximusbet-atualizada",
   "version": "1.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
+  },
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -9,7 +15,9 @@
   "devDependencies": {
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
-    "typescript": "^5.0.0",
+    "@vitejs/plugin-react": "^4.2.1",
+    "typescript": "^5.2.0",
+    "vite": "^5.2.0",
     "tailwindcss": "^3.4.1"
   }
 }
